--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,4 +9,22 @@
         <item name="android:textColor">@android:color/white</item>
         <item name="fontFamily">@font/roboto</item>
     </style>
+
+    <style name="DarkRedBox">
+        <item name="android:background">@android:color/holo_red_dark</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textSize">@dimen/box_text_size</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="fontFamily">@font/roboto</item>
+    </style>
+
+    <style name="BlueBox">
+        <item name="android:background">@android:color/holo_blue_light</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textSize">@dimen/box_text_size</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="fontFamily">@font/roboto</item>
+    </style>
 </resources>
