--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,43 +9,66 @@
     <TextView
         android:id="@+id/box_one_text"
         style="@style/LightGreenBox"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_wide"
         android:layout_marginTop="@dimen/margin_wide"
         android:layout_marginEnd="@dimen/margin_wide"
         android:text="@string/box_one"
-        app:layout_constraintDimensionRatio="2:1"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/box_two_text"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/box_two_text"
-        style="@style/DarkRedBox"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
+        android:id="@+id/boxTwoText"
+        style="@style/LightGreenBox"
+        android:layout_width="130dp"
+        android:layout_height="130dp"
         android:layout_marginStart="@dimen/margin_wide"
         android:layout_marginTop="@dimen/margin_wide"
-        android:layout_marginEnd="@dimen/margin_wide"
         android:text="@string/box_two"
-        app:layout_constraintDimensionRatio="1:3"
-        app:layout_constraintEnd_toStartOf="@id/box_three_text"
-        app:layout_constraintStart_toEndOf="@id/box_one_text"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/box_one_text" />
 
     <TextView
         android:id="@+id/box_three_text"
-        style="@style/BlueBox"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
+        style="@style/LightGreenBox"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_wide"
+        android:layout_marginEnd="@dimen/margin_wide"
+        android:text="@string/box_three"
+        app:layout_constraintBottom_toTopOf="@+id/box_four_text"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/boxTwoText"
+        app:layout_constraintTop_toTopOf="@+id/boxTwoText" />
+
+    <TextView
+        android:id="@+id/box_four_text"
+        style="@style/LightGreenBox"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_wide"
         android:layout_marginTop="@dimen/margin_wide"
         android:layout_marginEnd="@dimen/margin_wide"
-        android:text="@string/box_three"
-        app:layout_constraintDimensionRatio="1:1"
+        android:layout_marginBottom="@dimen/margin_wide"
+        android:text="@string/box_four"
+        app:layout_constraintBottom_toTopOf="@+id/box_five_text"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/box_two_text"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/boxTwoText"
+        app:layout_constraintTop_toBottomOf="@+id/box_three_text" />
+
+    <TextView
+        android:id="@+id/box_five_text"
+        style="@style/LightGreenBox"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_wide"
+        android:layout_marginEnd="@dimen/margin_wide"
+        android:text="@string/box_five"
+        app:layout_constraintBottom_toBottomOf="@+id/boxTwoText"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/boxTwoText"
+        app:layout_constraintTop_toBottomOf="@+id/box_four_text" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
