--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,13 +2,14 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/constraint_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
     <TextView
         android:id="@+id/box_one_text"
-        style="@style/LightGreenBox"
+        style="@style/WhiteBox"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_wide"
@@ -20,8 +21,8 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/boxTwoText"
-        style="@style/LightGreenBox"
+        android:id="@+id/box_two_text"
+        style="@style/WhiteBox"
         android:layout_width="130dp"
         android:layout_height="130dp"
         android:layout_marginStart="@dimen/margin_wide"
@@ -32,7 +33,7 @@
 
     <TextView
         android:id="@+id/box_three_text"
-        style="@style/LightGreenBox"
+        style="@style/WhiteBox"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_wide"
@@ -40,12 +41,12 @@
         android:text="@string/box_three"
         app:layout_constraintBottom_toTopOf="@+id/box_four_text"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/boxTwoText"
-        app:layout_constraintTop_toTopOf="@+id/boxTwoText" />
+        app:layout_constraintStart_toEndOf="@+id/box_two_text"
+        app:layout_constraintTop_toTopOf="@+id/box_two_text" />
 
     <TextView
         android:id="@+id/box_four_text"
-        style="@style/LightGreenBox"
+        style="@style/WhiteBox"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_wide"
@@ -55,20 +56,20 @@
         android:text="@string/box_four"
         app:layout_constraintBottom_toTopOf="@+id/box_five_text"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/boxTwoText"
+        app:layout_constraintStart_toEndOf="@+id/box_two_text"
         app:layout_constraintTop_toBottomOf="@+id/box_three_text" />
 
     <TextView
         android:id="@+id/box_five_text"
-        style="@style/LightGreenBox"
+        style="@style/WhiteBox"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_wide"
         android:layout_marginEnd="@dimen/margin_wide"
         android:text="@string/box_five"
-        app:layout_constraintBottom_toBottomOf="@+id/boxTwoText"
+        app:layout_constraintBottom_toBottomOf="@+id/box_two_text"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/boxTwoText"
+        app:layout_constraintStart_toEndOf="@+id/box_two_text"
         app:layout_constraintTop_toBottomOf="@+id/box_four_text" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
