--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#D32F2F</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="my_yellow">#FFD600</color>
+    <color name="my_green">#388E3C</color>
+    <color name="my_red">#C2185B</color>
 </resources>
